# helloworld

./: CMakeLists.txt  helloworld_cli.cpp
.github/workflows/: cmake.yml
helloworld/: CMakeLists.txt  helloworld.cpp
helloworld_cli/: CMakeLists.txt
helloworld_lib/: CMakeLists.txt  helloworld_lib.cpp  helloworld_lib.h
lib/: CMakeLists.txt
tests/: CMakeLists.txt  test_helloworld_lib.cpp  test_lib.cpp
